# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflow/: general.yml
.sqlx/: query-0c41fee6abe1eceaccda7fd3575d6a4ace3c8e52cfd5440d3ea968af11649dff.json
migrations/: 20250820042737_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
